[package]
name = "atcoder-judge-monitor"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

[features]
dummy-submissions = []

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.10", features = ["derive"] }
console = "0.15.8"
cookie_store = "0.21.0"
dialoguer = "0.11.0"
dirs = "5.0.1"
fs-err = "2.11.0"
futures = "0.3.30"
indexmap = "2.2.6"
open = "5.3.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", default-features = false, features = [
  "charset",
  "rustls-tls",
  "cookies",
  "json",
] }
reqwest_cookie_store = "0.8.0"
scraper = "0.19.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
strum = { version = "0.26.3", features = ["derive"] }
termion = "4.0.2"
tokio = { version = "1.39.1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
